Components: Fix TileGrid clipping CTA text on mobile

--- a/client/components/tile-grid/style.scss
+++ b/client/components/tile-grid/style.scss
@@ -146,7 +146,7 @@
 		background: none;
 		text-align: left;
 		font-size: 16px;
-		line-height: 1.2;
+		line-height: 1.4;
 		border: 0;
 		padding: 0;
 		text-transform: none;
